# harmony-secondary-screen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
docs/: ARCHITECTURE.md  COMPATIBILITY.md  PROTOCOL.md  REAL_DEVICE_TEST.md  V0_1_MILESTONE.md
host/: CMakeLists.txt  README.md
host/app/: data_plane_gate.h  host_server.cpp  host_server.h  input_agent.cpp  local_security.cpp  local_security.h  main.cpp  network_gate.cpp  network_gate.h  pointer_injector.cpp  pointer_injector.h  pointer_relay.cpp  pointer_relay.h
host/common/: hss_protocol.cpp  hss_protocol.h
host/driver/: Driver.cpp  Driver.h  HssIddDriver.inf  HssIddDriver.vcxproj  README.md
host/graphics/: annex_b.h  async_mft_schedule.h  com_apartment.h  mf_h264_encoder.cpp  mf_h264_encoder.h  mft_shutdown_state.h  pipe_sink.cpp  pipe_sink.h
host/tests/: async_mft_schedule_tests.cpp  data_plane_gate_tests.cpp  decoder_state_tests.cpp  encoder_smoke_tests.cpp  network_gate_tests.cpp  pointer_mapping_tests.cpp  protocol_tests.cpp  receiver_connect_policy_tests.cpp  security_contract_tests.cpp  wire_compatibility_tests.cpp
receiver/: build-profile.json5  oh-package.json5
receiver/AppScope/: app.json5
receiver/AppScope/resources/base/element/: string.json
receiver/entry/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
receiver/entry/src/main/: module.json5
receiver/entry/src/main/cpp/: CMakeLists.txt  avc_decoder_input.h  bounded_control_queue.h  connect_policy.h  decoder_state.h  napi_init.cpp  native_protocol.cpp  native_protocol.h  receiver_session.cpp  receiver_session.h
receiver/entry/src/main/cpp/types/libhss_receiver/: index.d.ts  oh-package.json5
receiver/entry/src/main/ets/entryability/: EntryAbility.ets
receiver/entry/src/main/ets/pages/: Index.ets
receiver/entry/src/main/resources/base/element/: color.json  string.json
scripts/: analyze-metrics.ps1  build-host.ps1  build-receiver.ps1  install-host-service.ps1  static-check.ps1  test.ps1
